[package]
name = "rsft-utils"
version = "0.1.0"
edition = "2021"
description = "A rust cargo package that can be use to simplify your life when testing files in rust."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
filetime = "0.2.22"
regex = "1.10.2"
